# diagram-sync-action

./: Dockerfile  README.md  action.yml  entrypoint.sh  pyproject.toml
src/diagram_sync/: confluence_client.py  sync.py  utils.py
